infrastructure/controllers/base/vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`vault.undefinedlab.uk`)
      services:
        - name: vault-active
          port: 8200
          nativeLB: true
  tls:
    passthrough: true
